# discord-dice-bot

./: .env-sample  .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
dice_bot_pyohio/: config.py  helpers.py
